--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <link rel="stylesheet" href="./style.css" />
 
     <link rel="stylesheet" href="./card.css" />
-
+<!-- just made a new comment for git check -->
     <link rel="stylesheet" href="./responsive.css" />
 
     <title>order or not</title>
