--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
     />
 
+
     <!--Owl Carousel-->
     <link rel="stylesheet" href="Css/owl.carousel.min.css" />
     <link rel="stylesheet" href="Css/owl.theme.default.min.css" />
@@ -47,7 +48,7 @@
             </div>
 
             <div class="icons">
-              <a href="#"> 966244262386<i class="fa-solid fa-phone"></i> </a>
+              <a href="#" class="telephone"> 966244262386<i class="fa-solid fa-phone"></i> </a>
             </div>
 
             <div class="icons">
@@ -843,6 +844,10 @@
             $('.menu').hide();
         }
       });
+
+      $('.telephone').click(function () {
+          alert('You have clicked on the telephone icon!')
+      })
     </script>
   </body>
 </html>
