--- a/index.html
+++ b/index.html
@@ -726,10 +726,16 @@
     <!--radius box html code start-->
     <div class="section">
       <div class="radius-box">
-        <button>رسال</button>
-        <input type="text" placeholder="لالإلكتروني۔بريد" />
-        <input type="text" placeholder="لإسم۔" />
-        <h1>اشترك الآن</h1>
+        <div class="button">
+          <button>رسال</button>
+        </div>
+        <div class="input-field">
+          <input type="text" placeholder="لالإلكتروني۔بريد" />
+          <div class="input-field">
+            <input type="text" placeholder="لإسم۔" />
+          </div>
+        </div>
+        <div class="heading"><h1>اشترك الآن</h1></div>
       </div>
     </div>
 
@@ -755,7 +761,7 @@
                   src="./images/image (1).webp"
                   alt=""
                   width="150px"
-                  height="155px"
+                  height="155px" class="logo-image"
                 />
               </div>
             </div>
